Bug 1599415 trigger `focus` when details summary element is clicked r=TYLin,smaug

Differential Revision: https://phabricator.services.mozilla.com/D72603